appId: com.youtrader.pro
---
- tapOn: "Settings"
- extendedWaitUntil:
    visible: "Settings"
    timeout: 10000
- assertVisible: "Settings"
